--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,15 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #BBF1F1;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +22,43 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  list-style-type: none;
+  padding: 0px 10px;
+}
+
+.article-card {
+  border: 1px solid #35B5AC;
+  border-radius: 3px;
+  margin: 3px;
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.18);
+  background-color: azure;
+  padding: 5px;
+}
+
+.title {
+  font-size: 1.2em;
+  padding: 5PX;
+  font-family: 'News Cycle', sans-serif;
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
+.votes-and-comments {
+  display: flex;
+  justify-content: space-between;
+}
+
+p {
+  margin: 0px;
+}
+
+.topic{
+ text-align: right;
+}
+
+nav {
+  width: 90vw;
+  display: flex;
+  justify-content: space-between;
 }
