--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
   color: white;
 }
 
+.small-App-header {
+  background-color: #282c34;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -28,12 +36,13 @@ ul {
 }
 
 .article-card {
-  border: 1px solid #35B5AC;
-  border-radius: 3px;
-  margin: 3px;
+  border-radius: 5px;
+  margin: 1em;
   box-shadow: 1px 2px rgba(0, 0, 0, 0.18);
   background-color: azure;
   padding: 5px;
+  max-width: 600px;
+  line-height: 2em;
 }
 
 .title {
@@ -54,7 +63,15 @@ p {
 }
 
 .topic{
- text-align: right;
+ align-self: end;
+ background-color: #3b5998;
+ width: fit-content;
+ padding: 0em 1em ;
+ border-radius: 5px;
+ color: white;
+ font-size: small;
+ line-height: 1.2em;
+ margin-bottom: 0.8em;
 }
 
 nav {
@@ -72,3 +89,63 @@ nav {
 .comment-card{
   margin: 10px 0px;
 }
+
+.article-header {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.article {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 7vw;
+  margin-top: -5em;
+  border-radius: 1em;
+  line-height: 1.75em;
+  color: #333333;
+  box-sizing: border-box;
+}
+
+.article-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.article-topic {
+  background-color: #3b5998;
+  width: fit-content;
+  padding: 0em 1em ;
+  border-radius: 5px;
+  color: white;
+  font-size: small;
+}
+
+.author {
+  font-weight: bold;
+  margin: 1em 0em;
+}
+
+.article-body {
+  background-color: rgb(227, 244, 244);
+  padding: 7vw;
+  box-sizing: border-box;
+  border-radius: 1em;
+  margin-bottom: 2em;
+}
+
+h1 {
+  line-height: 1.2em;
+}
+
+.all-articles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
