article voting added and topic links implemented

--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,12 @@ a {
 .submit-button {
   width: 100px;
 }
+
+.votes {
+  display: flex;
+}
+
+.vote-buttons {
+  display: flex;
+  flex-direction: column;
+}
