--- a/src/App.css
+++ b/src/App.css
@@ -215,9 +215,21 @@ a {
 
 .votes {
   display: flex;
+  margin: 5px;
 }
 
-.vote-buttons {
+.vote-button-container {
   display: flex;
   flex-direction: column;
+  margin: 0 0.2em;
+}
+
+.vote-button {
+  border: none;
+  background-color: azure;
+  border-radius: 3px;
+}
+
+.vote-button:hover:enabled {
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.18);
 }
